--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <div class="grid-container">
-          <div class="box1"><img src="../Signature/images/tttt1.webp" alt="" class="p1"></div>
-          <div class=" box2"><img src="../Signature/images/ttt2.jpg" alt="" class="p2"></div> 
-          <div class="box3"><img src="./Signature/images/3333.webp" alt="" class="p3"></div>
+          <div class="box1"><img src="./tttt1.webp" alt="" class="p1"></div>
+          <div class=" box2"><img src="./ttt2.jpg" alt="" class="p2"></div> 
+          <div class="box3"><img src="3333.webp" alt="" class="p3"></div>
         </div>
         <div class="find">
             <p><span class="span3">.....</span><span class="span1">Find your</span> <span class="span2"><span class="span4">..</span><strong>Anime Style</strong></span></p>
@@ -27,5 +27,6 @@
             <div class="box14"></div>
         </div>
     </div>
+    i
 </body>
 </html>
